--- a/dashboard.html
+++ b/dashboard.html
@@ -1394,10 +1394,10 @@
       .dir.atm_gi_idpfg4 {
         margin: 0;
       }
-      .atm_mk_h2mmj6 {
+      .relative {
         position: relative;
       }
-      .atm_mk_h2mmj6 {
+      .relative {
         position: relative;
       }
       .dir.atm_r3_1h6ojuz {
