--- a/experienceType.html
+++ b/experienceType.html
@@ -629,10 +629,10 @@
       .atm_vy_1osqo2v {
         width: 100%;
       }
-      .atm_9s_1ulexfb {
+      .block {
         display: block;
       }
-      .atm_9s_1ulexfb {
+      .block {
         display: block;
       }
       .dir.atm_705yyq_idpfg4:not(:focus) {
