--- a/products.html
+++ b/products.html
@@ -2820,7 +2820,7 @@
                                                             width: 100%;
                                                           "
                                                           ><span
-                                                            class="atm_12_q7pw6w atm_16_12c5xpv atm_u_1yy80mb atm_y_9cwzv5 atm_1c_lvmtox atm_1k_1ytfnp0 atm_2d_1r31cwp atm_9s_1ulexfb relative atm_e2p1ow_glywfm atm_5rfkrh_7tcf61 dir dir-ltr"
+                                                            class="atm_12_q7pw6w atm_16_12c5xpv atm_u_1yy80mb atm_y_9cwzv5 atm_1c_lvmtox atm_1k_1ytfnp0 atm_2d_1r31cwp block relative atm_e2p1ow_glywfm atm_5rfkrh_7tcf61 dir dir-ltr"
                                                             style="
                                                               height: 100%;
                                                               width: 100%;
