--- a/experiences.html
+++ b/experiences.html
@@ -292,7 +292,7 @@
         --gp-section-standard-padding: 48px !important;
         --gp-section-standard-padding-condensed: 24px !important;
       }
-      ._le6wlg {
+      .section-container {
         -webkit-box-lines: multiple !important;
         -webkit-box-pack: start !important;
         -ms-flex-pack: start !important;
@@ -317,38 +317,38 @@
         margin-right: 0px !important;
       }
       @media (min-width: 375px) {
-        ._le6wlg {
+        .section-container {
           padding-left: var(--gp-padding-smallAndAbove, 24px) !important;
           padding-right: var(--gp-padding-smallAndAbove, 24px) !important;
         }
       }
       @media (min-width: 744px) {
-        ._le6wlg {
+        .section-container {
           padding-left: var(--gp-padding-mediumAndAbove, 40px) !important;
           padding-right: var(--gp-padding-mediumAndAbove, 40px) !important;
         }
       }
       @media (min-width: 950px) {
-        ._le6wlg {
+        .section-container {
           padding-left: var(--gp-padding-mediumPlusAndAbove, 40px) !important;
           padding-right: var(--gp-padding-mediumPlusAndAbove, 40px) !important;
         }
       }
       @media (min-width: 1128px) {
-        ._le6wlg {
+        .section-container {
           padding-left: var(--gp-padding-largeAndAbove, 80px) !important;
           padding-right: var(--gp-padding-largeAndAbove, 80px) !important;
         }
       }
       @media (min-width: 1440px) {
-        ._le6wlg {
+        .section-container {
           max-width: none !important;
           padding-left: var(--gp-padding-xlargeAndAbove, 80px) !important;
           padding-right: var(--gp-padding-xlargeAndAbove, 80px) !important;
         }
       }
       @media print {
-        ._le6wlg {
+        .section-container {
           max-width: 100% !important;
           padding-left: 0px !important;
           padding-right: 0px !important;
@@ -4124,7 +4124,7 @@
                             --gp-section-bottom-margin: 24;
                           "
                         >
-                          <div class="_le6wlg">
+                          <div class="section-container">
                             <div
                               class="plmw1e5 mq5rv0q dir dir-ltr"
                               style="--maxWidth: 1120px"
@@ -4187,7 +4187,7 @@
                             --gp-section-bottom-margin: 12;
                           "
                         >
-                          <div class="_le6wlg">
+                          <div class="section-container">
                             <div
                               class="plmw1e5 mq5rv0q dir dir-ltr"
                               style="--maxWidth: 1120px"
@@ -4343,7 +4343,7 @@
                             --gp-section-bottom-margin: 12;
                           "
                         >
-                          <div class="_le6wlg">
+                          <div class="section-container">
                             <div
                               class="plmw1e5 mq5rv0q dir dir-ltr"
                               style="--maxWidth: 1120px"
@@ -4451,7 +4451,7 @@
                             --gp-section-bottom-margin: 12;
                           "
                         >
-                          <div class="_le6wlg">
+                          <div class="section-container">
                             <div
                               class="plmw1e5 mq5rv0q dir dir-ltr"
                               style="--maxWidth: 1120px"
@@ -4555,7 +4555,7 @@
                             --gp-section-bottom-margin: 12;
                           "
                         >
-                          <div class="_le6wlg">
+                          <div class="section-container">
                             <div
                               class="plmw1e5 mq5rv0q dir dir-ltr"
                               style="--maxWidth: 1120px"
@@ -4659,7 +4659,7 @@
                             --gp-section-bottom-margin: 12;
                           "
                         >
-                          <div class="_le6wlg">
+                          <div class="section-container">
                             <div
                               class="plmw1e5 mq5rv0q dir dir-ltr"
                               style="--maxWidth: 1120px"
