--- a/trips.html
+++ b/trips.html
@@ -183,7 +183,7 @@
                       <div class="_88xxct">
                         <div class="c1yo0219 dir dir-ltr">
                           <div style="--gp-section-max-width: 1440px">
-                            <div class="_le6wlg">
+                            <div class="section-container">
                               <div
                                 class="plmw1e5 mq5rv0q dir dir-ltr"
                                 style="--maxWidth: 1120px"
@@ -220,7 +220,7 @@
                         </div>
                         <div class="c1yo0219 dir dir-ltr">
                           <div style="--gp-section-max-width: 1440px">
-                            <div class="_le6wlg">
+                            <div class="section-container">
                               <div
                                 class="plmw1e5 mq5rv0q dir dir-ltr"
                                 style="--maxWidth: 1120px"
@@ -377,7 +377,7 @@
                         </div>
                         <div class="c1yo0219 dir dir-ltr">
                           <div style="--gp-section-max-width: 1440px">
-                            <div class="_le6wlg">
+                            <div class="section-container">
                               <div
                                 class="plmw1e5 mq5rv0q dir dir-ltr"
                                 style="--maxWidth: 1120px"
@@ -413,7 +413,7 @@
                         </div>
                         <div class="c1yo0219 dir dir-ltr">
                           <div style="--gp-section-max-width: 1440px">
-                            <div class="_le6wlg">
+                            <div class="section-container">
                               <div
                                 class="plmw1e5 mq5rv0q dir dir-ltr"
                                 style="--maxWidth: 1120px"
@@ -679,7 +679,7 @@
                         </div>
                         <div class="c1yo0219 dir dir-ltr">
                           <div style="--gp-section-max-width: 1440px">
-                            <div class="_le6wlg">
+                            <div class="section-container">
                               <div
                                 class="plmw1e5 mq5rv0q dir dir-ltr"
                                 style="--maxWidth: 1120px"
