--- a/insights.html
+++ b/insights.html
@@ -175,7 +175,7 @@
                   <main id="site-content">
                     <div class="c1yo0219 dir dir-ltr">
                       <div style="--gp-section-max-width: 1120px">
-                        <div class="_le6wlg">
+                        <div class="section-container">
                           <div
                             class="plmw1e5 mq5rv0q dir dir-ltr"
                             style="--maxWidth: 1120px"
@@ -207,7 +207,7 @@
                     </div>
                     <div class="c1yo0219 dir dir-ltr">
                       <div style="--gp-section-max-width: 1120px">
-                        <div class="_le6wlg">
+                        <div class="section-container">
                           <div
                             class="plmw1e5 mq5rv0q dir dir-ltr"
                             style="--maxWidth: 1120px"
@@ -1374,7 +1374,7 @@
                     </div>
                     <div class="c1yo0219 dir dir-ltr">
                       <div style="--gp-section-max-width: 1120px">
-                        <div class="_le6wlg">
+                        <div class="section-container">
                           <div
                             class="plmw1e5 mq5rv0q dir dir-ltr"
                             style="--maxWidth: 1120px"
@@ -1454,7 +1454,7 @@
                           data-section-id="EXPERIENCES_HOST_INSIGHTS_STANDARDS"
                           style="padding-top: 16px; padding-bottom: 16px"
                         >
-                          <div class="_le6wlg">
+                          <div class="section-container">
                             <div
                               class="plmw1e5 mq5rv0q dir dir-ltr"
                               style="--maxWidth: 1120px"
@@ -1575,7 +1575,7 @@
                     </div>
                     <div class="c1yo0219 dir dir-ltr">
                       <div style="--gp-section-max-width: 1120px">
-                        <div class="_le6wlg">
+                        <div class="section-container">
                           <div
                             class="plmw1e5 mq5rv0q dir dir-ltr"
                             style="--maxWidth: 1120px"
