--- a/merchandising.html
+++ b/merchandising.html
@@ -12609,7 +12609,7 @@
                                   data-section-id="PAGE_FOOTER"
                                 >
                                   <div class="fjmb2h dir dir-ltr">
-                                    <div class="_le6wlg">
+                                    <div class="section-container">
                                       <div
                                         style="--maxWidth: 1120px"
                                         class="plmw1e5 mq5rv0q dir dir-ltr"
