--- a/payment.html
+++ b/payment.html
@@ -97,7 +97,7 @@
                                 <div>
                                   <div class="c1yo0219 dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px">
-                                      <div class="_le6wlg">
+                                      <div class="section-container">
                                         <div
                                           class="plmw1e5 mq5rv0q dir dir-ltr"
                                           style="--maxWidth: 1120px"
